--- a/app/src/view-settings.html
+++ b/app/src/view-settings.html
@@ -73,7 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             ],
             
             setPlugins: function(activeplugins){
-                this.plugins = ['location','plugins','components','actions','building','mpc'].concat(activeplugins)
+                this.plugins = ['location','plugins','components','actions','building','mpc','shading'].concat(activeplugins)
             },
 
         });
