changed the app and database locations to be easier to handle in a filesystem

--- a/app/src/plugins/shading-settings.html
+++ b/app/src/plugins/shading-settings.html
@@ -44,15 +44,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </style>
 
 
-        <div class="flex">
+        <div>
             <div class="label">Visibility cost</div>
             <base-slider path="settings/shading/cost_visibility" status-path="" min="0" max="100"></base-slider>
         </div>
 
-        <div class="flex">
+        <!--<div class="flex">
             <div class="label">Movement cost</div>
             <base-slider path="settings/shading/cost_movement" status-path="" min="0" max="100"></base-slider>
-        </div>
+        </div>-->
 
 
 
