added dimmer widget and commented out the sortable tags as they interfere with the dialogs

--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -180,7 +180,7 @@
 
             <!-- Menu -->
             <paper-dialog id="menu" class$="menu" horizontal-align="right" vertical-allign="top">
-                <homecon-menu-item title="Settings" icon="homecon_gears" href="/settings"></homecon-menu-item>
+                <homecon-menu-item title="Settings" icon="edit_settings" href="/settings"></homecon-menu-item>
                 <homecon-menu-item title="Users" icon="homecon_users" href="/users"></homecon-menu-item>
                 <homecon-menu-item title="Editor" icon="pagebuilder_pagebuilder" href="/editor"></homecon-menu-item>
                 <homecon-menu-item title="Logout" icon="homecon_logout" href="#" on-tap="logout"></homecon-menu-item>
