--- a/app/src/homecon-pages-widget.html
+++ b/app/src/homecon-pages-widget.html
@@ -5,6 +5,7 @@
 
 <link rel="import" href="widgets/widget-button.html">
 <link rel="import" href="widgets/widget-switch.html">
+<link rel="import" href="widgets/widget-dimmer.html">
 <link rel="import" href="widgets/widget-shading.html">
 <link rel="import" href="widgets/widget-weather-block.html">
 <link rel="import" href="widgets/widget-chart.html">
