--- a/app/src/select-component.html
+++ b/app/src/select-component.html
@@ -9,6 +9,8 @@
     <template>
         <style>
             :host{
+                display: block;
+                position: relative;
             }
         </style>
         
