--- a/app/src/widgets/widget-status-button.html
+++ b/app/src/widgets/widget-status-button.html
@@ -26,6 +26,10 @@
                 font-size: 1.2em;
                 font-weight: 700;
             }
+            .statuslight{
+                max-width: 26px;
+                max-height: 26px;
+            }
             .edit{
                 position: absolute;
                 top: -10px;
