--- a/app/src/widgets/base-slider.html
+++ b/app/src/widgets/base-slider.html
@@ -44,6 +44,7 @@
                 },
                 value: {
                     type: Number,
+                    notify: true,
                 },
                 min: {
                     type: Number,
