added profile widget and updated mpc to it

--- a/app/src/homecon-edit-dialog.html
+++ b/app/src/homecon-edit-dialog.html
@@ -21,7 +21,7 @@
         </style>
         
         <paper-dialog id="dialog" entry-animation="scale-up-animation" exit-animation="fade-out-animation" dynamic-align>
-            <!--<paper-dialog-scrollable>-->
+            <paper-dialog-scrollable>
                 <form id="form" is="iron-form" on-iron-form-submit="save" action="/">
                     <content></content>
                     <div class="horizontal layout">
@@ -29,7 +29,7 @@
                         <paper-button raised on-tap="close">cancel</paper-button>
                     </div>
                 </form>
-            <!--</paper-dialog-scrollable>-->
+            </paper-dialog-scrollable>
         </paper-dialog>
 
             
