--- a/app/src/widgets/highcharts-behavior.html
+++ b/app/src/widgets/highcharts-behavior.html
@@ -277,7 +277,7 @@
                 xAxis: {
                     type: 'datetime',
                     dateTimeLabelFormats: {
-                        month: '%e. %b',
+                        month: '%e %b',
                         year: '%b',
                     },
                     title: {
