--- a/app/src/widgets/widget-alarm.html
+++ b/app/src/widgets/widget-alarm.html
@@ -77,7 +77,8 @@
     </template>
     <script>
         Polymer({
-            is: 'homecon-widget-alarm',
+            is: 'widget-alarm',
+            behaviors: [widgetBehavior],
             properties: {
                 config: {
                     type: 'Object',
