fixed bug in schedule and added schedules and actions to the demo

--- a/app/src/homecon-web-socket.html
+++ b/app/src/homecon-web-socket.html
@@ -44,7 +44,7 @@
         </paper-dialog>
 
         <paper-dialog id="noConnection" verticalAlign="bottom" no-cancel-on-outside-click no-cancel-on-esc-key entry-animation="scale-up-animation" exit-animation="fade-out-animation">
-            <p>No connection with HomeCon <a href="#" on-tap="connect">reconnect</a></p>
+            <p>No connection with HomeCon, <a href="#" on-tap="openSettings">review settings</a> or <a href="#" on-tap="connect">reconnect</a></p>
         </paper-dialog>
 
     </template>
