--- a/app/src/widgets/highcharts-behavior.html
+++ b/app/src/widgets/highcharts-behavior.html
@@ -290,11 +290,9 @@
                     },
                 },
                 tooltip: {
-                    //headerFormat: '<b>{series.name}</b><br>',
-                    //pointFormat: '{point.x:%e. %b}: {point.y:.2f}',
                     dateTimeLabelFormats:{
-                         millisecond:"%A, %b %e, %H:%M:%S.%L",
-                         second:"%A, %b %e, %H:%M:%S",
+                         millisecond:"%A, %b %e, %H:%M",
+                         second:"%A, %b %e, %H:%M",
                          minute:"%A, %b %e, %H:%M",
                          hour:"%A, %b %e, %H:%M",
                          day:"%A, %b %e, %Y",
