updated and tested the knx plugin, disconnection does not work yet

--- a/app/src/view-settings.html
+++ b/app/src/view-settings.html
@@ -21,10 +21,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="homecon-web-socket-sender.html">
 <link rel="import" href="homecon-edit-dialog.html">
 <link rel="import" href="plugin-settings-container.html">
+<link rel="import" href="config-utils-behavior.html">
 
-<!--<link rel="import" href="plugins/components-settings.html">
-<link rel="import" href="plugins/actions-settings.html">
-<link rel="import" href="plugins/systemidentification-settings.html">-->
 
 <dom-module id="view-settings">
 
