updated and tested computed component setting through the app

--- a/app/src/plugins/components-settings.html
+++ b/app/src/plugins/components-settings.html
@@ -185,7 +185,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <paper-input label="Write groups" value="{{newStateConfig.writegroups}}"></paper-input>
             <paper-input label="Write users" value="{{newStateConfig.writeusers}}"></paper-input>
 
-
+            <h3>Computed</h3>
+            <paper-input label="Triggers" value="{{newStateConfig.triggers}}"></paper-input>
+            <paper-input label="Computed" value="{{newStateConfig.computed}}"></paper-input>
 
             <!--<template is="dom-repeat" items="{{newConfig}}" filter="{{_showStateConfigKey(item.key)}}">
                 <paper-input label="{{item.key}}" value="{{item.value}}"></paper-input>
