added timestampdelta config attribute to states to handle states representing measurements over some time

--- a/app/src/plugins/components-settings.html
+++ b/app/src/plugins/components-settings.html
@@ -176,6 +176,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <paper-item value="dict">dictionary</paper-item>
                 </paper-menu>
             </paper-dropdown-menu>
+            <paper-input label="Timestamp delta" value="{{newStateConfig.timestampdelta}}"></paper-input>
 
             <paper-toggle-button checked="{{newStateConfig.log}}">Log</paper-toggle-button>
 
