updated states with scale and offset

--- a/app/src/homecon-pages-widget.html
+++ b/app/src/homecon-pages-widget.html
@@ -3,7 +3,7 @@
 
 <link rel="import" href="homecon-web-socket-object.html">
 
-<link rel="import" href="widgets/widget-button.html">
+<link rel="import" href="widgets/widget-button.html"> <!--FIXME dynamic imports-->
 <link rel="import" href="widgets/widget-switch.html">
 <link rel="import" href="widgets/widget-dimmer.html">
 <link rel="import" href="widgets/widget-shading.html">
