--- a/app/src/widgets/widget-shading.html
+++ b/app/src/widgets/widget-shading.html
@@ -177,8 +177,8 @@
                 this.set('newPath',this.config.path);
                 this.$.componentSelect.reload();
                 this.set('newIcon',this.config.icon);
-                this.set('newValueUp',this.config.valueOn);
-                this.set('newValueDown',this.config.valueOff);
+                this.set('newValueUp',this.config.valueUp);
+                this.set('newValueDown',this.config.valueDown);
                 this.$.editDialog.open();
             },
 
