fixed bugs in slider and measurements

--- a/app/src/widgets/base-slider.html
+++ b/app/src/widgets/base-slider.html
@@ -69,7 +69,7 @@
                     return Math.log10(value);
                 }
                 else{
-                    return value;
+                    return value-0;
                 }
             },
 
@@ -78,7 +78,7 @@
                     return Math.pow(10,value);
                 }
                 else{
-                    return value;
+                    return value-0;
                 }
             },
 
